# cpputest-autotools_demo

./: .gitignore  Makefile.am  README.txt  configure.ac  notes.txt  todo.txt
include/: module.h
m4/: .gitignore
products/: main.c
products/print_42/: Makefile.am
products/print_43/: Makefile.am  main.c
src/: Makefile.am  module.c
tests/: Makefile.am  Test_Module.cpp
